// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Summary/> by default should render the right structure 1`] = `
<Summary
  areOnlyNightPriceAndRatingDisplayed={false}
  isShowingPlaceholder={false}
  locationName="Catania"
  periodText="per night"
  pricePerPeriod="$280"
  pricePerPeriodPrefix="morf"
  propertyName="The Cat House"
  ratingNumber={4.8}
>
  <SegmentGroup
    className="is-summary"
    compact={true}
  >
    <div
      className="ui compact segments is-summary"
    >
      <Segment>
        <div
          className="ui segment"
        >
          <Heading
            className={null}
            hasMargin={true}
            isColorInverted={false}
            size="medium"
            textAlign={null}
          >
            <Header
              as="h3"
              className=""
              inverted={false}
              textAlign={null}
            >
              <h3
                className="ui header"
              >
                The Cat House
              </h3>
            </Header>
          </Heading>
        </div>
      </Segment>
      <SegmentGroup
        className="horizontal-wrap"
        horizontal={true}
      >
        <div
          className="ui horizontal segments horizontal-wrap"
        >
          <Segment
            className="is-location-name"
            title="Catania"
          >
            <div
              className="ui segment is-location-name"
              title="Catania"
            >
              Catania
              <Icon
                className={null}
                color="primary"
                hasBorder={false}
                isButton={false}
                isCircular={false}
                isColorInverted={false}
                isDisabled={false}
                isLabelLeft={false}
                labelText={null}
                labelWeight={null}
                name="map pin"
                path={null}
                size="small"
              >
                <i
                  className="icon primary small"
                >
                  <svg
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12,2.72c-3.17,0-5.74,3-5.74,6.69S12,21.28,12,21.28s5.74-8.17,5.74-11.87S15.17,2.72,12,2.72Zm0,9.74a4,4,0,1,1,4-4A4,4,0,0,1,12,12.46Z"
                      fill="currentColor"
                    />
                  </svg>
                </i>
              </Icon>
            </div>
          </Segment>
          <Segment
            className="is-rating"
          >
            <div
              className="ui segment is-rating"
            >
              <Rating
                iconSize="tiny"
                isShowingNumeral={true}
                ratingNumber={4.8}
              >
                4.8
                <Rating
                  clearable="auto"
                  disabled={true}
                  maxRating={5}
                  rating={5}
                  size="tiny"
                >
                  <div
                    className="ui tiny disabled rating"
                    onMouseLeave={[Function]}
                    role="radiogroup"
                    tabIndex={0}
                  >
                    <RatingIcon
                      active={true}
                      aria-checked={false}
                      aria-posinset={1}
                      aria-setsize={5}
                      as="i"
                      index={0}
                      key="0"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      selected={false}
                      tabIndex={-1}
                    >
                      <i
                        aria-checked={false}
                        aria-posinset={1}
                        aria-setsize={5}
                        className="active icon"
                        onClick={[Function]}
                        onKeyUp={[Function]}
                        onMouseEnter={[Function]}
                        role="radio"
                        tabIndex={-1}
                      />
                    </RatingIcon>
                    <RatingIcon
                      active={true}
                      aria-checked={false}
                      aria-posinset={2}
                      aria-setsize={5}
                      as="i"
                      index={1}
                      key="1"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      selected={false}
                      tabIndex={-1}
                    >
                      <i
                        aria-checked={false}
                        aria-posinset={2}
                        aria-setsize={5}
                        className="active icon"
                        onClick={[Function]}
                        onKeyUp={[Function]}
                        onMouseEnter={[Function]}
                        role="radio"
                        tabIndex={-1}
                      />
                    </RatingIcon>
                    <RatingIcon
                      active={true}
                      aria-checked={false}
                      aria-posinset={3}
                      aria-setsize={5}
                      as="i"
                      index={2}
                      key="2"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      selected={false}
                      tabIndex={-1}
                    >
                      <i
                        aria-checked={false}
                        aria-posinset={3}
                        aria-setsize={5}
                        className="active icon"
                        onClick={[Function]}
                        onKeyUp={[Function]}
                        onMouseEnter={[Function]}
                        role="radio"
                        tabIndex={-1}
                      />
                    </RatingIcon>
                    <RatingIcon
                      active={true}
                      aria-checked={false}
                      aria-posinset={4}
                      aria-setsize={5}
                      as="i"
                      index={3}
                      key="3"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      selected={false}
                      tabIndex={-1}
                    >
                      <i
                        aria-checked={false}
                        aria-posinset={4}
                        aria-setsize={5}
                        className="active icon"
                        onClick={[Function]}
                        onKeyUp={[Function]}
                        onMouseEnter={[Function]}
                        role="radio"
                        tabIndex={-1}
                      />
                    </RatingIcon>
                    <RatingIcon
                      active={true}
                      aria-checked={true}
                      aria-posinset={5}
                      aria-setsize={5}
                      as="i"
                      index={4}
                      key="4"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      selected={false}
                      tabIndex={-1}
                    >
                      <i
                        aria-checked={true}
                        aria-posinset={5}
                        aria-setsize={5}
                        className="active icon"
                        onClick={[Function]}
                        onKeyUp={[Function]}
                        onMouseEnter={[Function]}
                        role="radio"
                        tabIndex={-1}
                      />
                    </RatingIcon>
                  </div>
                </Rating>
              </Rating>
            </div>
          </Segment>
          <Segment>
            <div
              className="ui segment"
            >
              <span>
                morf
                 
                <Heading
                  className={null}
                  hasMargin={true}
                  isColorInverted={false}
                  size="small"
                  textAlign={null}
                >
                  <Header
                    as="h4"
                    className=""
                    inverted={false}
                    textAlign={null}
                  >
                    <h4
                      className="ui header"
                    >
                      $280
                    </h4>
                  </Header>
                </Heading>
                per night
              </span>
            </div>
          </Segment>
        </div>
      </SegmentGroup>
    </div>
  </SegmentGroup>
</Summary>
`;

exports[`<Summary/> if \`props.areOnlyNightPriceAndRatingDisplayed\` is true should render the right children 1`] = `
<Summary
  areOnlyNightPriceAndRatingDisplayed={true}
  isShowingPlaceholder={false}
  locationName="Catania"
  periodText="per night"
  pricePerPeriod="$280"
  pricePerPeriodPrefix="morf"
  propertyName="The Cat House"
  ratingNumber={4.8}
>
  <SegmentGroup
    className="is-summary"
    compact={true}
  >
    <div
      className="ui compact segments is-summary"
    >
      <SegmentGroup
        className="horizontal-wrap"
        horizontal={false}
      >
        <div
          className="ui segments horizontal-wrap"
        >
          <Segment>
            <div
              className="ui segment"
            >
              <span>
                morf
                 
                <Heading
                  className={null}
                  hasMargin={true}
                  isColorInverted={false}
                  size="small"
                  textAlign={null}
                >
                  <Header
                    as="h4"
                    className=""
                    inverted={false}
                    textAlign={null}
                  >
                    <h4
                      className="ui header"
                    >
                      $280
                    </h4>
                  </Header>
                </Heading>
                per night
              </span>
            </div>
          </Segment>
          <Segment
            className="is-rating"
          >
            <div
              className="ui segment is-rating"
            >
              <Rating
                iconSize="tiny"
                isShowingNumeral={true}
                ratingNumber={4.8}
              >
                4.8
                <Rating
                  clearable="auto"
                  disabled={true}
                  maxRating={5}
                  rating={5}
                  size="tiny"
                >
                  <div
                    className="ui tiny disabled rating"
                    onMouseLeave={[Function]}
                    role="radiogroup"
                    tabIndex={0}
                  >
                    <RatingIcon
                      active={true}
                      aria-checked={false}
                      aria-posinset={1}
                      aria-setsize={5}
                      as="i"
                      index={0}
                      key="0"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      selected={false}
                      tabIndex={-1}
                    >
                      <i
                        aria-checked={false}
                        aria-posinset={1}
                        aria-setsize={5}
                        className="active icon"
                        onClick={[Function]}
                        onKeyUp={[Function]}
                        onMouseEnter={[Function]}
                        role="radio"
                        tabIndex={-1}
                      />
                    </RatingIcon>
                    <RatingIcon
                      active={true}
                      aria-checked={false}
                      aria-posinset={2}
                      aria-setsize={5}
                      as="i"
                      index={1}
                      key="1"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      selected={false}
                      tabIndex={-1}
                    >
                      <i
                        aria-checked={false}
                        aria-posinset={2}
                        aria-setsize={5}
                        className="active icon"
                        onClick={[Function]}
                        onKeyUp={[Function]}
                        onMouseEnter={[Function]}
                        role="radio"
                        tabIndex={-1}
                      />
                    </RatingIcon>
                    <RatingIcon
                      active={true}
                      aria-checked={false}
                      aria-posinset={3}
                      aria-setsize={5}
                      as="i"
                      index={2}
                      key="2"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      selected={false}
                      tabIndex={-1}
                    >
                      <i
                        aria-checked={false}
                        aria-posinset={3}
                        aria-setsize={5}
                        className="active icon"
                        onClick={[Function]}
                        onKeyUp={[Function]}
                        onMouseEnter={[Function]}
                        role="radio"
                        tabIndex={-1}
                      />
                    </RatingIcon>
                    <RatingIcon
                      active={true}
                      aria-checked={false}
                      aria-posinset={4}
                      aria-setsize={5}
                      as="i"
                      index={3}
                      key="3"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      selected={false}
                      tabIndex={-1}
                    >
                      <i
                        aria-checked={false}
                        aria-posinset={4}
                        aria-setsize={5}
                        className="active icon"
                        onClick={[Function]}
                        onKeyUp={[Function]}
                        onMouseEnter={[Function]}
                        role="radio"
                        tabIndex={-1}
                      />
                    </RatingIcon>
                    <RatingIcon
                      active={true}
                      aria-checked={true}
                      aria-posinset={5}
                      aria-setsize={5}
                      as="i"
                      index={4}
                      key="4"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      selected={false}
                      tabIndex={-1}
                    >
                      <i
                        aria-checked={true}
                        aria-posinset={5}
                        aria-setsize={5}
                        className="active icon"
                        onClick={[Function]}
                        onKeyUp={[Function]}
                        onMouseEnter={[Function]}
                        role="radio"
                        tabIndex={-1}
                      />
                    </RatingIcon>
                  </div>
                </Rating>
              </Rating>
            </div>
          </Segment>
        </div>
      </SegmentGroup>
    </div>
  </SegmentGroup>
</Summary>
`;
